cmake: added cmake to compile the lib
This change removes unnecessary Makefiles and updated the CMakeLists to
compile the library.

Signed-off-by: Kaustav Goswami <kggoswami@ucdavis.edu>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,3 +14,12 @@ add_executable(main
     src/s_permissions.cc
     src/utility.hh
     src/utility.cc)
+
+add_executable(fam_main
+    src/fam_main.cc
+    src/s_dmalloc.cc
+    src/s_dmalloc.hh
+    src/s_permissions.hh
+    src/s_permissions.cc
+    src/utility.hh
+    src/utility.cc)
